Added functionality for the rest of the database interface, abstracted out some of the generic pieces of the db call

--- a/vaporviz/page_source/test_ajax_calls.html
+++ b/vaporviz/page_source/test_ajax_calls.html
@@ -8,6 +8,9 @@
 <BODY>
 Here we test the various and sundry required AJAX calls:<BR><BR>
 Annotations:<div id="annotations_landing_zone"></div><BR><BR>
+Utterances:<div id="utterances_landing_zone"></div><BR><BR>
+Audio Events:<div id="audio_events_landing_zone"></div><BR><BR>
+Pseudoterms:<div id="pseudoterms_landing_zone"></div><BR><BR>
 
 
 <script>
