Added Bottle actions for returning audio clips

--- a/vaporviz/page_source/audio_test.html
+++ b/vaporviz/page_source/audio_test.html
@@ -1,25 +1,80 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Gasp Test</title>
+  <title>Audio Test</title>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">script></script>
   <script>
    function playClip() {
      var mediaElement = document.getElementById('player');
 
      // Audio clip offsets from Aren were 388 and 470
-     mediaElement.src = '/gujarati/answers/0003.wav#t=3.88,4.70';
+     mediaElement.src = '/audio/gujarati/answers/0003.wav#t=3.88,4.70';
 
      // load() must be called after updating src
      mediaElement.load();
      mediaElement.play();
    }
+
+   function playAudioEvent(playerElementID, audioEventID) {
+     var mediaElement = document.getElementById(playerElementID);
+     mediaElement.src = '/audio/audio_event/' + audioEventID + '.wav';
+     // load() must be called after updating src
+     mediaElement.load();
+     mediaElement.play();
+   }
+
+   function playPseudoterm(playerElementID, pseudotermID) {
+     var mediaElement = document.getElementById(playerElementID);
+     mediaElement.src = '/audio/pseudoterm/' + pseudotermID + '.wav';
+     // load() must be called after updating src
+     mediaElement.load();
+     mediaElement.play();
+   }
+
+   function playUtterance(playerElementID, utteranceID) {
+     var mediaElement = document.getElementById(playerElementID);
+     mediaElement.src = '/audio/utterance/' + utteranceID + '.wav';
+     // load() must be called after updating src
+     mediaElement.load();
+     mediaElement.play();
+   }
+
   </script>
 </head>
 <body>
-  <div>
-    <h1>Audio Test - Gujarati</h1>
 
+  <div>
+    <h1>Audio Event - dynamically created clip</h1>
+    <audio id="ae_player">
+      <p>Your browser does not support the audio element</p>
+    </audio>
+    <button onclick="playAudioEvent('ae_player', '5360d6c0fedd526522c43935');">Play</button>
+  </div>
+
+  <div>
+    <h1>Pseudoterm - dynamically created clip</h1>
+    <audio id="pt_player">
+      <p>Your browser does not support the audio element</p>
+    </audio>
+    <button onclick="playPseudoterm('pt_player', '5360d6c0fedd526522c43934');">Play</button>
+  </div>
+
+  <div>
+    <h1>Utterance - static file</h1>
+    <audio id="utt_player">
+      <p>Your browser does not support the audio element</p>
+    </audio>
+    <button onclick="playUtterance('utt_player', '5360d6c0fedd526522c43933');">Play</button>
+
+    <audio src="/audio/utterance/5360d6c0fedd526522c43933.wav" controls>
+      <p>Your browser does not support the audio element</p>
+    </audio>
+  </div>
+
+  <hr>
+
+  <div>
+    <h1>Gujarati - static file</h1>
     <audio id="player">
       <p>Your browser does not support the audio element</p>
     </audio>
@@ -27,9 +82,8 @@
   </div>
 
   <div>
-    <h1>Audio Test - English</h1>
-
-    <audio src="/BUCKEYE/s01/s0101a.wav" controls>
+    <h1>English - static file</h1>
+    <audio src="/audio/BUCKEYE/s01/s0101a.wav" controls>
       <p>Your browser does not support the audio element</p>
     </audio>
   </div>
