PT annotation widget play button now functional

--- a/vaporviz/page_source/pseudoterm_template.html
+++ b/vaporviz/page_source/pseudoterm_template.html
@@ -4,7 +4,11 @@
 	<td style="fontsize=22"><b>Native:</b><input id="pt_native_display"></input></b></td>
   </tr>
   <tr>
-	<td><div id="pt_snippets_button">Play button goes here.</div></td>
+    <td>Snippets:
+	  <audio id="pt_player">
+      <p>Your browser does not support the audio element</p>
+    </audio>
+    <button id="pt_snippets_play_button">Play</button>
 	<td><div id="pt_snippets_with_context_button">Play button with context goes here.</div></td>
   </tr>
   <tr>
