--- a/vaporviz/page_source/audio_test.html
+++ b/vaporviz/page_source/audio_test.html
@@ -2,7 +2,14 @@
 <html>
 <head>
   <title>Audio Test</title>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">script></script>
+
+  <link rel="stylesheet" href="/static/bootstrap-3.1.1/css/bootstrap.css"/>
+  <link rel="stylesheet" href="/static/bootstrap-3.1.1/css/bootstrap-theme.css"/>
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="/static/bootstrap-3.1.1/js/bootstrap.js"></script>
+  <script src="/www/data_handler.js"></script>
+
   <script>
    function playClip() {
      var mediaElement = document.getElementById('player');
@@ -39,6 +46,88 @@
      mediaElement.play();
    }
 
+   // Adds a <div> containing Pause and Play controls to an element.
+   //   - parentElement:   DOM element that the <div> will be appended to
+   //   - playerElementID: unique ID that will be used for creating
+   //                      DOM ID's assigned to audio player and buttons
+   //   - audioSourceURL:  URL of audio source file
+   function addControlsForPlayer(parentElement, playerElementID, audioSourceURL) {
+     var controlDiv = $('<div>')
+       .attr('id', playerElementID + '_audio_control')
+       .addClass('audio_control');
+     var audioElement = $('<audio>')
+       .attr('id', playerElementID + '_audio_element')
+       .bind('ended', {'playerElementID': playerElementID}, function(event) {
+         $('#' + event.data.playerElementID + '_play_button').prop('disabled', false);
+         $('#' + event.data.playerElementID + '_pause_button').prop('disabled', true);
+        });
+     var playButton = $('<button>')
+       .attr('id', playerElementID + '_play_button')
+       .click({'audioSourceURL': audioSourceURL, 'playerElementID': playerElementID}, function(event) {
+         var mediaElement = document.getElementById(event.data.playerElementID + '_audio_element');
+         mediaElement.src = event.data.audioSourceURL;
+         // load() must be called after updating src
+         mediaElement.load();
+         mediaElement.play();
+
+         $('#' + event.data.playerElementID + '_play_button').prop('disabled', true);
+         $('#' + event.data.playerElementID + '_pause_button').prop('disabled', false);
+       })
+       .html('Play');
+     var pauseButton = $('<button>')
+       .attr('id', playerElementID + '_pause_button')
+       .click({'playerElementID': playerElementID}, function(event) {
+         var mediaElement = document.getElementById(event.data.playerElementID + '_audio_element');
+         mediaElement.pause();
+
+         $('#' + event.data.playerElementID + '_play_button').prop('disabled', false);
+         $('#' + event.data.playerElementID + '_pause_button').prop('disabled', true);
+       })
+       .html('Pause')
+       .prop('disabled', true);
+
+     controlDiv.append(audioElement);
+     controlDiv.append(playButton);
+     controlDiv.append(pauseButton);
+
+     parentElement.append(controlDiv);
+   }
+
+   function addPseudotermList() {
+     send = {};
+     send.dataset='buckeye' // HARDCODE
+     send.count = 10; //TODO: pull from some element
+     console.log(send)
+
+     $.ajaxSetup({
+       contentType: "application/json; charset=utf-8",
+       dataType: "json"
+     });
+
+     $.ajax({
+       url: "/find_pseudoterms",
+       type: "POST",
+       data: JSON.stringify(send),
+       error: function(xhr, error) {
+         alert('Error!  Status = ' + xhr.status + ' Message = ' + error);
+       },
+       success: function(data) {
+
+         for (var i in data) {
+           var pseudoterm_div = $('<div>').html("Pseudoterm ID: " + data[i].native_display);
+           addControlsForPlayer(
+             pseudoterm_div,
+             data[i].native_display,
+             '/audio/pseudoterm/' + data[i]['_id'] + '.wav');
+           $('#pseudoterm_list').append(pseudoterm_div);
+         }
+       }
+     });
+   }
+
+   $(document).ready(function() {
+     addPseudotermList();
+   });
   </script>
 </head>
 <body>
@@ -57,6 +146,9 @@
       <p>Your browser does not support the audio element</p>
     </audio>
     <button onclick="playPseudoterm('pt_player', '5360d6c0fedd526522c43934');">Play</button>
+  </div>
+
+  <div id="pseudoterm_list">
   </div>
 
   <div>
