Modified pseudoterm template to use vapor_audio.js

--- a/vaporviz/page_source/pseudoterm_template.html
+++ b/vaporviz/page_source/pseudoterm_template.html
@@ -1,22 +1,23 @@
 <table>
   <tr>
-	<td style="fontsize=22"><b>Eng:</b><input id="pt_eng_display"></input></b></td>
-	<td style="fontsize=22"><b>Native:</b><input id="pt_native_display"></input></b></td>
+    <td style="fontsize=22"><b>Eng:</b><input id="pt_eng_display"></input></b></td>
+    <td style="fontsize=22"><b>Native:</b><input id="pt_native_display"></input></b></td>
   </tr>
   <tr>
-    <td>Snippets:
-	  <audio id="pt_player">
-      <p>Your browser does not support the audio element</p>
-    </audio>
-    <button id="pt_snippets_play_button">Play</button>
-	<td><div id="pt_snippets_with_context_button">Play button with context goes here.</div></td>
+    <td>
+      <div id="pt_snippets_audio_player"></div>
+    </td>
+    <td>
+      <div id="pt_snippets_with_context_button">Play button with context goes here.</div>
+    </td>
   </tr>
   <tr>
-	<td colspan=2> <div id="pt_stats_landing_zone"></div></td>
+    <td colspan=2> <div id="pt_stats_landing_zone"></div></td>
+  </tr>
   <tr>
-	<td colspan=2 align="right"><div id="pt_annotate_button"></div></td>
+    <td colspan=2 align="right"><div id="pt_annotate_button"></div></td>
   </tr>
 </table>
 
-	
-	
+
+
