Can now play pseudoterm audio samples with surrounding audio context

--- a/vaporviz/page_source/pseudoterm_template.html
+++ b/vaporviz/page_source/pseudoterm_template.html
@@ -5,10 +5,12 @@
   </tr>
   <tr>
     <td>
+      Snippets
       <div id="pt_snippets_audio_player"></div>
     </td>
     <td>
-      <div id="pt_snippets_with_context_button">Play button with context goes here.</div>
+      Snippets with Context
+      <div id="pt_snippets_with_context_audio_player"></div>
     </td>
   </tr>
   <tr>
