--- a/vaporviz/page_source/index.html
+++ b/vaporviz/page_source/index.html
@@ -8,5 +8,7 @@
   <h2><a href="/www/audio_test.html">Audio Test</a></h2>
 
   <h2><a href="/www/test_pseudoterm_audio.html">Pseudoterm Audio Test</a></h2>
+
+  <h2><a href="/www/test_cloud_data_call.html">Venncloud data call test</a></h2>
 </body>
 </html>
