Made test wordcloud display functional. Still some issues to iron out, but it's displaying at least

--- a/vaporviz/page_source/index.html
+++ b/vaporviz/page_source/index.html
@@ -10,5 +10,7 @@
   <h2><a href="/www/test_pseudoterm_audio.html">Pseudoterm Audio Test</a></h2>
 
   <h2><a href="/www/test_cloud_data_call.html">Venncloud data call test</a></h2>
+
+  <h2><a href="/www/test_venncloud.html">Venncloud display test</a></h2>
 </body>
 </html>
