--- a/vaporviz/page_source/test_venncloud.html
+++ b/vaporviz/page_source/test_venncloud.html
@@ -1,85 +1,89 @@
-
-<HTML>
+<html>
 <head>
+  <link rel="stylesheet" href="/www/jquery-ui.css">
+  <link rel="stylesheet" href="/www/dynamic_wordclouds.css">
 
-<script src="http://localhost:12321/www/jquery-1.8.3.js"></script>
-  <script src="http://localhost:12321/www/jquery-ui.js"></script>
-  <script src="http://localhost:12321/www/floating-1.12.js"></script>
-  <script src="http://localhost:12321/www/dynamic_wordclouds.js"></script>
-<script src="http://localhost:12321/www/prettyprint.js"></script>
+  <script src="/www/jquery-1.8.3.js"></script>
+  <script src="/www/jquery-ui.js"></script>
+  <script src="/www/floating-1.12.js"></script>
+  <script src="/www/dynamic_wordclouds.js"></script>
+  <script src="/www/prettyprint.js"></script>
+
   <script src="/www/vapor_audio.js"></script>
+  <script src="/www/data_handler.js"></script>
 
-  <link rel="stylesheet" href="http://localhost:12321/www/jquery-ui.css">
-  <link rel="stylesheet" href="http://localhost:12321/www/dynamic_wordclouds.css">
+  <script>
+    function create_utterance_venncloud() {
+      utterances1 = {};
+      utterances1.utterance_ids = [
+        '53627c6e04dc077fb2110b78',
+        '53627c6e04dc077fb211149b',
+        '53627c6f04dc077fb21122e7'];
+      utterances1.dataset_name="Set1";
 
+      utterances2 = {};
+      utterances2.utterance_ids = [
+        '53627c7004dc077fb2113a6b',
+        '53627c7004dc077fb2113cc5',
+        '53627c8404dc077fb2135c70',
+        '53627c6f04dc077fb21122e7'];
+      utterances2.dataset_name="Set2";
+      console.log([utterances1,utterances2]);
+      venncloud_from_utterances([utterances1,utterances2]);
+    }
 
+    $(document).ready(function() {
+      // On 2014-05-14, CTH modified page to call create_utterance_venncloud()
+      // from $(document).ready() instead of using:
+      //   $.getScript("/www/data_handler", create_utterance_venncloud)
+      // because the [current] Safari, Chrome and Firefox debuggers can't put
+      // breakpoints in scripts that are loaded using jQuery's getScript()
+      create_utterance_venncloud();
+    });
 
-
-<!--<script src="http://localhost:12321/www/data_handler.js"></script>-->
-
+    $.get("/www/venncloud_template.html", function(data){
+      $('#cloud_data_landing_zone').html(data);
+    });
+  </script>
 </head>
-<BODY>
-
+<body>
 
 <!-- TODO: proper annotation instead of just updating the element in the db -->
 
 <div id='annotation_landing_zone'></div>
-<div id="floatdivleft" style="  
-    position:absolute;  
-    width:350px;height:100px;top:10px;right:10px;  
-    padding:5px;background:#FFFFFF;  
-    border:2px solid #2266AA;  
+<div id="floatdivleft" style="
+    position:absolute;
+    width:350px;height:100px;top:10px;right:10px;
+    padding:5px;background:#FFFFFF;
+    border:2px solid #2266AA;
     z-index:100">
   <a href='javascript:;' onclick='hide_example_windows()' style='font-size:10'><b>[close]</b></a>
   <a href='javascript:;' onclick='mark_as_junk()' style='font-size:10'><b>[This pseudoterm is junk.]</b></a>
 
-<!-- Bandaid for the broken $.get-->
-<table>
-  <tr>
-    <td style="fontsize=22"><b>Eng:</b><input id="pt_eng_display"></input></b></td>
-    <td style="fontsize=22"><b>Native:</b><input id="pt_native_display"></input></b></td>
-  </tr>
-  <tr>
-    <td>
-      Snippets
-      <span id="pt_snippets_audio_player"></span>
-    </td>
-    <td>
-      Snippets with Context
-      <span id="pt_snippets_with_context_audio_player"></span>
-    </td>
-  </tr>
-</table>
-<!-- Bandaid for the broken $.get-->
+  <!-- Bandaid for the broken $.get-->
+  <table>
+    <tr>
+      <td style="fontsize=22"><b>Eng:</b><input id="pt_eng_display"></input></b></td>
+      <td style="fontsize=22"><b>Native:</b><input id="pt_native_display"></input></b></td>
+    </tr>
+    <tr>
+      <td>
+        Snippets
+        <span id="pt_snippets_audio_player"></span>
+      </td>
+      <td>
+        Snippets with Context
+        <span id="pt_snippets_with_context_audio_player"></span>
+      </td>
+    </tr>
+  </table>
+  <!-- Bandaid for the broken $.get-->
 
-
-<!--<span id="annotation_landing_zone">Annotation window goes here.</span>-->
+  <!--<span id="annotation_landing_zone">Annotation window goes here.</span>-->
 </div>
 
+<div id="cloud_data_landing_zone"></div>
+<br><br>
 
-
-
-<div id="cloud_data_landing_zone"></div><BR><BR>
-
-
-<script>
-
-  $.get("http://localhost:12321/www/venncloud_template.html", function(data){
-  $('#cloud_data_landing_zone').html(data);
-});
-$.getScript("http://localhost:12321/www/data_handler.js",function(){
-
-  utterances1 = {};
-  utterances1.utterance_ids = ['53627c6e04dc077fb2110b78','53627c6e04dc077fb211149b','53627c6f04dc077fb21122e7'];
-  utterances1.dataset_name="Set1";
-
-  utterances2 = {};
-    utterances2.utterance_ids = ['53627c7004dc077fb2113a6b','53627c7004dc077fb2113cc5','53627c8404dc077fb2135c70','53627c6f04dc077fb21122e7'];
-utterances2.dataset_name="Set2";
-console.log([utterances1,utterances2]);
-    venncloud_from_utterances([utterances1,utterances2]);
-
-});
-</script>
-</BODY>
-</HTML>
+</body>
+</html>
