--- a/vaporviz/page_source/test_cloud_data_call.html
+++ b/vaporviz/page_source/test_cloud_data_call.html
@@ -1,8 +1,8 @@
 <HTML>
 <head>
-<script src="http://localhost:12321/www/jquery-1.8.3.js"></script>
-<script src="http://localhost:12321/www/prettyprint.js"></script>
-<!--<script src="http://localhost:12321/www/data_handler.js"></script>-->
+<script src="/www/jquery-1.8.3.js"></script>
+<script src="/www/prettyprint.js"></script>
+<!--<script src="/www/data_handler.js"></script>-->
 
 </head>
 <BODY>
@@ -10,7 +10,7 @@
 Cloud Data LZ:<div id="cloud_data_landing_zone"></div><BR><BR>
 
 <script>
-$.getScript("http://localhost:12321/www/data_handler.js",function(){
+$.getScript("/www/data_handler.js",function(){
 test_cloud_data_call();
 });
 </script>
