--- a/vaporviz/page_source/test_venncloud.html
+++ b/vaporviz/page_source/test_venncloud.html
@@ -13,6 +13,7 @@
   <script src="/www/jquery-ui.js"></script>
   <script src="/www/floating-1.12.js"></script>
   <script src="/www/dynamic_wordclouds.js"></script>
+  <script src="/www/prettyprint.js"></script>
 
   <script src="/static/wavesurfer/wavesurfer.js"></script>
   <script src="/static/wavesurfer/webaudio.js"></script>
@@ -55,8 +56,41 @@
       });
     }
 
+    function create_wordcloud_from_all_utterances() {
+      $.ajax({
+        url: "/find_utterances",
+        type: "POST",
+        data: JSON.stringify({'dataset': 'buckeye', 'count': 256}),
+        error: function(xhr, error) {
+          alert('Error!  Status = ' + xhr.status + ' Message = ' + error);
+        },
+        success: function(utterances) {
+          var
+            i,
+            total_utterances,
+            utterance_set1 = {
+              'dataset_name': 'Set1',
+              'utterance_ids': []
+            },
+            utterance_set2 = {
+              'dataset_name': 'Set2',
+              'utterance_ids': []
+            };
+
+          total_utterances = utterances.length;
+          for (i = 0; i < total_utterances; i++) {
+            utterance_set1.utterance_ids.push(utterances[i]._id);
+          }
+
+          console.log([utterance_set1,utterance_set2]);
+          venncloud_from_utterances([utterance_set1,utterance_set2]);
+        }
+      });
+    }
+
     $(document).ready(function() {
-      create_utterance_venncloud();
+//      create_utterance_venncloud();
+      create_wordcloud_from_all_utterances();
 
       addWaveformVisualizer('waveform_visualizer');
       addControlsForWaveformVisualizer($('#pt_snippets_audio_player'), 'waveform_visualizer');
