--- a/vaporviz/page_source/test_venncloud.html
+++ b/vaporviz/page_source/test_venncloud.html
@@ -128,6 +128,9 @@
           </div>
         </div>
       </div>
+      <!-- Commented out code below: Experiments replacing existing wordcloud menus
+           with Bootstrap-styled wordcloud menus
+      -->
       <!--
       <div style="margin: 0.5em;">
         <div class="btn-group">
@@ -178,6 +181,20 @@
               Sort by
               <span class="caret"></span>
             </button>
+            <ul class="dropdown-menu" role="menu" style="padding-left: 1em;" id="radio">
+              <li>
+                <input type="radio" id="ALPHABETIC" name="radio" checked="checked" />
+                <label for="ALPHABETIC">Alphabetic</label>
+              </li>
+              <li>
+                <input type="radio" id="COUNT" name="radio" />
+                <label for="COUNT">Frequency of Occurence</label>
+              </li>
+              <li>
+                <input type="radio" id="IDF" name="radio" />
+                <label for="IDF">Rarity in Corpus</label>
+              </li>
+            </ul>
           </div>
           <div class="btn-group">
             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
