--- a/vaporviz/page_source/test_venncloud.html
+++ b/vaporviz/page_source/test_venncloud.html
@@ -123,7 +123,7 @@
           </div>
           <div class="form-group">
             <label for="pt_native_display">Native</label>
-            <input id="pt_native_display"></input>
+            <input id="pt_native_display" disabled></input>
           </div>
           <div class="form-group">
             <div id="waveform_visualizer_utterance_list" style="padding-left: 1em;"></div>
