Added link to Corpus view from index page.

--- a/vaporviz/page_source/index.html
+++ b/vaporviz/page_source/index.html
@@ -3,6 +3,11 @@
 <head>
 </head>
 <body>
+
+  <h1><a href="/www/corpus.html">Corpus View</a></h1>
+
+  <hr />
+
   <h2><a href="/www/test_ajax_calls.html">AJAX Test</a></h2>
 
   <h2><a href="/www/audio_test.html">Audio Test</a></h2>
