Added /document/list view

--- a/vaporviz/page_source/index.html
+++ b/vaporviz/page_source/index.html
@@ -6,6 +6,8 @@
 
   <h1><a href="/www/corpus.html">Corpus View</a></h1>
 
+  <h1><a href="/document/list">Document List</a></h1>
+
   <hr />
 
   <h2><a href="/www/test_ajax_calls.html">AJAX Test</a></h2>
