--- a/vaporviz/page_source/test_venncloud.html
+++ b/vaporviz/page_source/test_venncloud.html
@@ -1,219 +1,85 @@
-<!DOCTYPE html>
+
 <html>
 <head>
-  <link rel="stylesheet" href="/www/jquery-ui.css">
-  <link rel="stylesheet" href="/www/dynamic_wordclouds.css">
 
-  <link rel="stylesheet" href="/static/bootstrap-3.1.1/css/bootstrap.css"/>
-  <link rel="stylesheet" href="/static/bootstrap-3.1.1/css/bootstrap-theme.css"/>
-
-  <script src="/static/jquery-1.11.0.min.js"></script>
-  <script src="/static/bootstrap-3.1.1/js/bootstrap.js"></script>
-
+<script src="/www/jquery-1.8.3.js"></script>
   <script src="/www/jquery-ui.js"></script>
   <script src="/www/floating-1.12.js"></script>
   <script src="/www/dynamic_wordclouds.js"></script>
-  <script src="/www/prettyprint.js"></script>
-
-  <script src="/static/wavesurfer/wavesurfer.js"></script>
-  <script src="/static/wavesurfer/webaudio.js"></script>
-  <script src="/static/wavesurfer/webaudio.buffer.js"></script>
-  <script src="/static/wavesurfer/webaudio.media.js"></script>
-  <script src="/static/wavesurfer/drawer.js"></script>
-  <script src="/static/wavesurfer/drawer.canvas.js"></script>
-
+<script src="/www/prettyprint.js"></script>
   <script src="/www/vapor_audio.js"></script>
-  <script src="/www/data_handler.js"></script>
 
-  <script>
-    function create_utterance_venncloud() {
-      $.ajax({
-        url: "/find_utterances",
-        type: "POST",
-        data: JSON.stringify({'dataset': 'buckeye', 'count': 7}),
-        error: function(xhr, error) {
-          alert('Error!  Status = ' + xhr.status + ' Message = ' + error);
-        },
-        success: function(utterances) {
-          utterance_set1 = {};
-          utterance_set1.utterance_ids = [
-            utterances[0]._id,
-            utterances[1]._id,
-            utterances[2]._id
-          ];
-          utterance_set1.dataset_name="Set1";
+  <link rel="stylesheet" href="/www/jquery-ui.css">
+  <link rel="stylesheet" href="/www/dynamic_wordclouds.css">
 
-          utterance_set2 = {};
-          utterance_set2.utterance_ids = [
-            utterances[2]._id,
-            utterances[3]._id,
-            utterances[4]._id
-          ];
-          utterance_set2.dataset_name="Set2";
-          console.log([utterance_set1,utterance_set2]);
-          venncloud_from_utterances([utterance_set1,utterance_set2]);
-        }
-      });
-    }
 
-    function create_wordcloud_from_all_utterances() {
-      $.ajax({
-        url: "/find_utterances",
-        type: "POST",
-        data: JSON.stringify({'dataset': 'buckeye', 'count': 256}),
-        error: function(xhr, error) {
-          alert('Error!  Status = ' + xhr.status + ' Message = ' + error);
-        },
-        success: function(utterances) {
-          var
-            i,
-            total_utterances,
-            utterance_set1 = {
-              'dataset_name': 'Set1',
-              'utterance_ids': []
-            },
-            utterance_set2 = {
-              'dataset_name': 'Set2',
-              'utterance_ids': []
-            };
 
-          total_utterances = utterances.length;
-          for (i = 0; i < total_utterances; i++) {
-            utterance_set1.utterance_ids.push(utterances[i]._id);
-          }
 
-          console.log([utterance_set1,utterance_set2]);
-          venncloud_from_utterances([utterance_set1,utterance_set2]);
-        }
-      });
-    }
+<!--<script src="/www/data_handler.js"></script>-->
 
-    $(document).ready(function() {
-//      create_utterance_venncloud();
-      create_wordcloud_from_all_utterances();
-
-      addWaveformVisualizer('waveform_visualizer');
-      addControlsForWaveformVisualizer($('#pt_snippets_audio_player'), 'waveform_visualizer');
-    });
-
-    $.get("/www/venncloud_template.html", function(data){
-      $('#cloud_data_landing_zone').html(data);
-    });
-  </script>
 </head>
-<body style="padding-top: 200px;">
+<BODY>
+
 
 <!-- TODO: proper annotation instead of just updating the element in the db -->
 
-<div class="container">
+<div id='annotation_landing_zone'></div>
+<div id="floatdivleft" style="
+    position:absolute;
+    width:350px;height:100px;top:10px;right:10px;
+    padding:5px;background:#FFFFFF;
+    border:2px solid #2266AA;
+    z-index:100">
+  <a href='javascript:;' onclick='hide_example_windows()' style='font-size:10'><b>[close]</b></a>
+  <a href='javascript:;' onclick='mark_as_junk()' style='font-size:10'><b>[This pseudoterm is junk.]</b></a>
 
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
-      <div style="border: 1px solid #C0C0C0; margin-top: 0.5em; margin-bottom: 0.5em;">
-        <div id="waveform_visualizer"></div>
-      </div>
-      <div>
-        <div class="form-inline">
-          <div class="form-group">
-            <span id="pt_snippets_audio_player"></span>
-          </div>
-          <div class="form-group">
-            <label for="pt_eng_display">English</label>
-            <input id="pt_eng_display"></input>
-          </div>
-          <div class="form-group">
-            <label for="pt_native_display">Native</label>
-            <input id="pt_native_display" disabled></input>
-          </div>
-          <div class="form-group">
-            <div id="waveform_visualizer_utterance_list" style="padding-left: 1em;"></div>
-          </div>
-        </div>
-      </div>
-      <!-- Commented out code below: Experiments replacing existing wordcloud menus
-           with Bootstrap-styled wordcloud menus
-      -->
-      <!--
-      <div style="margin: 0.5em;">
-        <div class="btn-group">
-          <div class="btn-group">
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-              Entities
-              <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Action</a></li>
-            </ul>
-          </div>
-          <div class="btn-group">
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-              Common Cloud
-              <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Action</a></li>
-            </ul>
-          </div>
-          <div class="btn-group">
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-              TF filter
-              <span class="caret"></span>
-            </button>
-          </div>
-          <div class="btn-group">
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-              IDF filter
-              <span class="caret"></span>
-            </button>
-          </div>
-          <div class="btn-group">
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-              Size
-              <span class="caret"></span>
-            </button>
-          </div>
-          <div class="btn-group">
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-              Opacity
-              <span class="caret"></span>
-            </button>
-          </div>
-          <div class="btn-group">
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-              Sort by
-              <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" role="menu" style="padding-left: 1em;" id="radio">
-              <li>
-                <input type="radio" id="ALPHABETIC" name="radio" checked="checked" />
-                <label for="ALPHABETIC">Alphabetic</label>
-              </li>
-              <li>
-                <input type="radio" id="COUNT" name="radio" />
-                <label for="COUNT">Frequency of Occurence</label>
-              </li>
-              <li>
-                <input type="radio" id="IDF" name="radio" />
-                <label for="IDF">Rarity in Corpus</label>
-              </li>
-            </ul>
-          </div>
-          <div class="btn-group">
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-              Legend
-              <span class="caret"></span>
-            </button>
-          </div>
-        </div>
-      </div>
-      -->
-    </div>
-  </nav>
+<!-- Bandaid for the broken $.get-->
+<table>
+  <tr>
+    <td style="fontsize=22"><b>Eng:</b><input id="pt_eng_display"></input></b></td>
+    <td style="fontsize=22"><b>Native:</b><input id="pt_native_display"></input></b></td>
+  </tr>
+  <tr>
+    <td>
+      Snippets
+      <span id="pt_snippets_audio_player"></span>
+    </td>
+    <td>
+      Snippets with Context
+      <span id="pt_snippets_with_context_audio_player"></span>
+    </td>
+  </tr>
+</table>
+<!-- Bandaid for the broken $.get-->
 
-  <div id='annotation_landing_zone'></div>
 
-  <div id="cloud_data_landing_zone"></div>
-</div><!-- /.container -->
+<!--<span id="annotation_landing_zone">Annotation window goes here.</span>-->
+</div>
 
+
+
+
+<div id="cloud_data_landing_zone"></div><BR><BR>
+
+
+<script>
+
+  $.get("/www/venncloud_template.html", function(data){
+  $('#cloud_data_landing_zone').html(data);
+});
+$.getScript("/www/data_handler.js",function(){
+
+  utterances1 = {};
+  utterances1.utterance_ids = ['53627c6e04dc077fb2110b78','53627c6e04dc077fb211149b','53627c6f04dc077fb21122e7'];
+  utterances1.dataset_name="Set1";
+
+  utterances2 = {};
+    utterances2.utterance_ids = ['53627c7004dc077fb2113a6b','53627c7004dc077fb2113cc5','53627c8404dc077fb2135c70','53627c6f04dc077fb21122e7'];
+utterances2.dataset_name="Set2";
+console.log([utterances1,utterances2]);
+    venncloud_from_utterances([utterances1,utterances2]);
+
+});
+</script>
 </body>
 </html>
