--- a/vaporviz/page_source/corpus.html
+++ b/vaporviz/page_source/corpus.html
@@ -65,6 +65,9 @@
 
       addWaveformVisualizer('waveform_visualizer');
       addControlsForWaveformVisualizer($('#pt_snippets_audio_player'), 'waveform_visualizer');
+
+	$('#pt_junk_button').click( junk_this_pseudoterm) ;
+
     });
 
     $.get("/www/venncloud_template.html", function(data){
@@ -93,6 +96,9 @@
             <label for="pt_native_display">Native</label>
             <input id="pt_native_display" disabled></input>
           </div>
+		  <div class="form-group">
+			<button class="btn btn-primary btn-xs" id="pt_junk_button"><i class="glyphicon glyphicon-trash"></i></button>
+		  </div>
           <div class="form-group">
             <div id="waveform_visualizer_utterance_list" style="padding-left: 1em;"></div>
           </div>
