CSS link tags are now closed correctly

--- a/vaporviz/page_source/test_venncloud.html
+++ b/vaporviz/page_source/test_venncloud.html
@@ -8,8 +8,8 @@
   <script src="/www/prettyprint.js"></script>
   <script src="/www/vapor_audio.js"></script>
 
-  <link rel="stylesheet" href="/www/jquery-ui.css">
-  <link rel="stylesheet" href="/www/dynamic_wordclouds.css">
+  <link rel="stylesheet" href="/www/jquery-ui.css" />
+  <link rel="stylesheet" href="/www/dynamic_wordclouds.css" />
 
   <!--<script src="/www/data_handler.js"></script>-->
 
