All scripts now using current version of jQuery and jQuery UI.

--- a/vaporviz/page_source/venncloud_template.html
+++ b/vaporviz/page_source/venncloud_template.html
@@ -2,15 +2,15 @@
 <html>
 <head>
   <title>Venncloud Template</title>
-
-<!--    <script src="offline_source/jquery-1.8.3.js"></script>
-    <script src="offline_source/jquery-ui.js"></script>
+<!--
+    <script src="/static/jquery-1.11.0.min.js"></script>
+    <script src="/static/jquery-ui-1.10.4/js/jquery-ui-1.10.4.min.js"></script>
     <script src="offline_source/floating-1.12.js"></script>
     <script src="dynamic_wordclouds.js"></script>
 
-
-    <link rel="stylesheet" href="offline_source/jquery-ui.css">
-    <link rel="stylesheet" href="offline_source/dynamic_wordclouds.css">-->
+    <link rel="stylesheet" href="/static/jquery-ui-1.10.4/css/ui-lightness/jquery-ui-1.10.4.css"/>
+    <link rel="stylesheet" href="offline_source/dynamic_wordclouds.css">
+-->
 </head>
 <body>
 
