--- a/vaporviz/page_source/venncloud_template.html
+++ b/vaporviz/page_source/venncloud_template.html
@@ -223,7 +223,7 @@
   </table>
   <br/>
 
-  <div id='wordcloud_landing_zone'>Caution: Wordcloud Landing Zone</div>
+  <div id='wordcloud_location'>Caution: Wordcloud Landing Zone</div>
   <!--<div id='wordcloud_example_zone'>Caution: Examples Landing Zone</div>-->
 
   <div id="floatdivright" style="
