Renamed vapor_audio.js to waveform_visualizer.js

--- a/vaporviz/page_source/audio_test.html
+++ b/vaporviz/page_source/audio_test.html
@@ -17,7 +17,7 @@
   <script src="/static/wavesurfer/drawer.canvas.js"></script>
 
   <script src="/www/data_handler.js"></script>
-  <script src="/www/vapor_audio.js"></script>
+  <script src="/www/waveform_visualizer.js"></script>
 
   <script>
    function addPseudotermList(waveformVisualizerID) {
