--- a/vaporviz/page_source/test_bootstrap_venncloud.html
+++ b/vaporviz/page_source/test_bootstrap_venncloud.html
@@ -22,7 +22,7 @@
   <script src="/static/wavesurfer/drawer.js"></script>
   <script src="/static/wavesurfer/drawer.canvas.js"></script>
 
-  <script src="/www/vapor_audio.js"></script>
+  <script src="/www/waveform_visualizer.js"></script>
   <script src="/www/data_handler.js"></script>
 
   <script>
