--- a/vaporviz/page_source/test_venncloud.html
+++ b/vaporviz/page_source/test_venncloud.html
@@ -7,7 +7,7 @@
   <script src="/www/floating-1.12.js"></script>
   <script src="/www/dynamic_wordclouds.js"></script>
   <script src="/www/prettyprint.js"></script>
-  <script src="/www/vapor_audio.js"></script>
+  <script src="/www/waveform_visualizer.js"></script>
 
   <link rel="stylesheet" href="/static/jquery-ui-1.10.4/css/ui-lightness/jquery-ui-1.10.4.css"/>
   <link rel="stylesheet" href="/www/dynamic_wordclouds.css" />
