Moved third-party JavaScript files from page_source/ to static/

--- a/vaporviz/page_source/corpus_corpus_aware.html
+++ b/vaporviz/page_source/corpus_corpus_aware.html
@@ -9,11 +9,8 @@
 
   <script src="/static/jquery-1.11.1.min.js"></script>
   <script src="/static/bootstrap-3.1.1/js/bootstrap.js"></script>
-
-  <script src="/www/jquery-ui.js"></script>
-  <script src="/www/floating-1.12.js"></script>
-  <script src="/www/dynamic_wordclouds.js"></script>
-  <script src="/www/prettyprint.js"></script>
+  <script src="/static/floating-1.12.js"></script>
+  <script src="/static/prettyprint.js"></script>
 
   <script src="/static/wavesurfer/wavesurfer.js"></script>
   <script src="/static/wavesurfer/webaudio.js"></script>
@@ -22,6 +19,7 @@
   <script src="/static/wavesurfer/drawer.js"></script>
   <script src="/static/wavesurfer/drawer.canvas.js"></script>
 
+  <script src="/www/dynamic_wordclouds.js"></script>
   <script src="/www/waveform_visualizer.js"></script>
   <script src="/www/data_handler.js"></script>
 
