--- a/vaporviz/page_source/test_ajax_calls.html
+++ b/vaporviz/page_source/test_ajax_calls.html
@@ -1,7 +1,7 @@
 <HTML>
 <head>
 <script src="/static/jquery-1.11.1.min.js"></script>
-<script src="/www/prettyprint.js"></script>
+<script src="/static/prettyprint.js"></script>
 <!--<script src="/www/data_handler.js"></script>-->
 
 </head>
