--- a/vaporviz/page_source/test_venncloud.html
+++ b/vaporviz/page_source/test_venncloud.html
@@ -4,9 +4,9 @@
   <script src="/static/jquery-1.11.1.min.js"></script>
   <script src="/static/jquery-ui-1.10.4/js/jquery-ui-1.10.4.min.js"></script>
 
-  <script src="/www/floating-1.12.js"></script>
+  <script src="/static/floating-1.12.js"></script>
+  <script src="/static/prettyprint.js"></script>
   <script src="/www/dynamic_wordclouds.js"></script>
-  <script src="/www/prettyprint.js"></script>
   <script src="/www/waveform_visualizer.js"></script>
 
   <link rel="stylesheet" href="/static/jquery-ui-1.10.4/css/ui-lightness/jquery-ui-1.10.4.css"/>
